@@ -1,3 +1,8 @@
+/**
+ * 작성자: 황요한
+ * 회사-서버실 매핑 서비스
+ * 매핑 생성, 조회, 삭제 기능 제공
+ */
 package org.example.finalbe.domains.companyserverroom.service;
 
 import lombok.RequiredArgsConstructor;
@@ -22,16 +27,9 @@ import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.ArrayList;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.stream.Collectors;
 
-/**
- * 회사-서버실 매핑 서비스
- * 매핑 생성, 조회, 삭제 기능 제공
- */
 @Slf4j
 @Service
 @RequiredArgsConstructor
@@ -44,7 +42,7 @@ public class CompanyServerRoomService {
     private final MemberRepository memberRepository;
 
     /**
-     * 현재 인증된 사용자 조회
+     * 인증된 사용자 조회
      */
     private Member getCurrentMember() {
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
@@ -54,7 +52,6 @@ public class CompanyServerRoomService {
         }
 
         String userId = authentication.getName();
-
         if (userId == null || userId.equals("anonymousUser")) {
             throw new AccessDeniedException("인증이 필요합니다.");
         }
@@ -71,199 +68,123 @@ public class CompanyServerRoomService {
      * 회사-서버실 매핑 생성
      */
     @Transactional
-    public List<CompanyServerRoomResponse> createCompanyServerRoomMappings(
-            CompanyServerRoomCreateRequest request) {
+    public List<CompanyServerRoomResponse> createCompanyServerRoomMappings(CompanyServerRoomCreateRequest request) {
 
-        Member currentMember = getCurrentMember();
-        log.info("Creating company-serverRoom mappings for company: {} by user: {}",
-                request.companyId(), currentMember.getId());
+        Member current = getCurrentMember();
+        log.info("[CompanyServerRoom] Create mappings. companyId={}, user={}", request.companyId(), current.getId());
 
         if (request.companyId() == null) {
             throw new IllegalArgumentException("회사 ID를 입력해주세요.");
         }
+
         if (request.serverRoomIds() == null || request.serverRoomIds().isEmpty()) {
             throw new IllegalArgumentException("서버실을 하나 이상 선택해주세요.");
         }
 
-        // 중복 제거
-        List<Long> uniqueServerRoomIds = new ArrayList<>(new HashSet<>(request.serverRoomIds()));
-        if (uniqueServerRoomIds.size() != request.serverRoomIds().size()) {
-            log.warn("Duplicate serverRoom IDs found in request, removed duplicates");
-        }
+        // 중복 ID 제거
+        List<Long> serverRoomIds = new ArrayList<>(new HashSet<>(request.serverRoomIds()));
 
-        // 회사 존재 확인
         Company company = companyRepository.findActiveById(request.companyId())
                 .orElseThrow(() -> new EntityNotFoundException("회사", request.companyId()));
 
-        // 서버실 존재 여부 검증
-        List<ServerRoom> serverRooms = new ArrayList<>();
-        for (Long serverRoomId : uniqueServerRoomIds) {
-            if (serverRoomId == null) {
-                throw new IllegalArgumentException("서버실 ID는 null일 수 없습니다.");
-            }
+        // 서버실 조회
+        List<ServerRoom> serverRooms = serverRoomIds.stream()
+                .map(id -> serverRoomRepository.findActiveById(id)
+                        .orElseThrow(() -> new EntityNotFoundException("서버실", id)))
+                .toList();
 
-            ServerRoom serverRoom = serverRoomRepository.findActiveById(serverRoomId)
-                    .orElseThrow(() -> new EntityNotFoundException("서버실", serverRoomId));
-            serverRooms.add(serverRoom);
-        }
+        // 기존 매핑 중복 체크
+        List<Long> duplicates = serverRoomIds.stream()
+                .filter(id -> companyServerRoomRepository.existsByCompanyIdAndServerRoomId(company.getId(), id))
+                .toList();
 
-        // 중복 매핑 체크
-        List<Long> duplicateIds = new ArrayList<>();
-        for (Long serverRoomId : uniqueServerRoomIds) {
-            if (companyServerRoomRepository.existsByCompanyIdAndServerRoomId(
-                    request.companyId(), serverRoomId)) {
-                duplicateIds.add(serverRoomId);
-            }
-        }
-
-        if (!duplicateIds.isEmpty()) {
-            String duplicateIdsStr = duplicateIds.stream()
-                    .map(String::valueOf)
-                    .collect(Collectors.joining(", "));
-            throw new DuplicateException(
-                    String.format("이미 매핑된 서버실이 있습니다. 서버실 ID: %s", duplicateIdsStr));
+        if (!duplicates.isEmpty()) {
+            throw new DuplicateException("이미 매핑된 서버실 ID: " + duplicates);
         }
 
         // 매핑 생성
-        List<CompanyServerRoom> savedMappings = new ArrayList<>();
-        try {
-            for (ServerRoom serverRoom : serverRooms) {
-                CompanyServerRoom companyServerRoom = CompanyServerRoom.builder()
-                        .company(company)
-                        .serverRoom(serverRoom)
-                        .description(request.description())
-                        .grantedBy(currentMember.getUserName())
-                        .build();
+        List<CompanyServerRoom> saved = new ArrayList<>();
+        for (ServerRoom sr : serverRooms) {
+            CompanyServerRoom mapping = CompanyServerRoom.builder()
+                    .company(company)
+                    .serverRoom(sr)
+                    .description(request.description())
+                    .grantedBy(current.getUserName())
+                    .build();
 
-                CompanyServerRoom saved = companyServerRoomRepository.save(companyServerRoom);
-                savedMappings.add(saved);
-
-                log.debug("Company-serverRoom mapping created: company={}, serverRoom={}",
-                        request.companyId(), serverRoom.getId());
-            }
-
-            log.info("Successfully created {} company-serverRoom mappings", savedMappings.size());
-
-            return savedMappings.stream()
-                    .map(CompanyServerRoomResponse::from)
-                    .collect(Collectors.toList());
-
-        } catch (Exception e) {
-            log.error("Failed to create company-serverRoom mappings, transaction will rollback", e);
-            throw new IllegalStateException("매핑 생성 중 오류가 발생했습니다.", e);
+            saved.add(companyServerRoomRepository.save(mapping));
         }
+
+        log.info("[CompanyServerRoom] {} mappings created.", saved.size());
+
+        return saved.stream()
+                .map(CompanyServerRoomResponse::from)
+                .toList();
     }
 
     /**
-     * 회사의 서버실 매핑 목록 조회
+     * 특정 회사의 매핑 목록 조회
      */
     public List<CompanyServerRoomResponse> getCompanyServerRoomsByCompanyId(Long companyId) {
-        log.info("Fetching company-serverRoom mappings for company: {}", companyId);
-
-        if (companyId == null) {
-            throw new IllegalArgumentException("회사 ID를 입력해주세요.");
-        }
+        log.info("[CompanyServerRoom] Fetch mappings by company: {}", companyId);
 
         companyRepository.findActiveById(companyId)
                 .orElseThrow(() -> new EntityNotFoundException("회사", companyId));
 
-        List<CompanyServerRoomResponse> mappings = companyServerRoomRepository
-                .findByCompanyId(companyId)
+        return companyServerRoomRepository.findByCompanyId(companyId)
                 .stream()
                 .map(CompanyServerRoomResponse::from)
-                .collect(Collectors.toList());
-
-        log.info("Found {} mappings for company: {}", mappings.size(), companyId);
-        return mappings;
+                .toList();
     }
 
     /**
-     * 서버실의 회사 매핑 목록 조회
+     * 특정 서버실의 매핑 목록 조회
      */
     public List<CompanyServerRoomResponse> getCompanyServerRoomsByServerRoomId(Long serverRoomId) {
-        log.info("Fetching company-serverRoom mappings for serverRoom: {}", serverRoomId);
-
-        if (serverRoomId == null) {
-            throw new IllegalArgumentException("서버실 ID를 입력해주세요.");
-        }
+        log.info("[CompanyServerRoom] Fetch mappings by serverRoom: {}", serverRoomId);
 
         serverRoomRepository.findActiveById(serverRoomId)
                 .orElseThrow(() -> new EntityNotFoundException("서버실", serverRoomId));
 
-        List<CompanyServerRoomResponse> mappings = companyServerRoomRepository
-                .findByServerRoomId(serverRoomId)
+        return companyServerRoomRepository.findByServerRoomId(serverRoomId)
                 .stream()
                 .map(CompanyServerRoomResponse::from)
-                .collect(Collectors.toList());
-
-        log.info("Found {} mappings for serverRoom: {}", mappings.size(), serverRoomId);
-        return mappings;
+                .toList();
     }
 
     /**
-     * 회사-서버실 매핑 삭제
+     * 단일 매핑 삭제 (Soft Delete)
      */
     @Transactional
     public void deleteCompanyServerRoomMapping(Long companyId, Long serverRoomId) {
-        log.info("Deleting company-serverRoom mapping: company={}, serverRoom={}",
-                companyId, serverRoomId);
+        log.info("[CompanyServerRoom] Delete mapping: company={}, serverRoom={}", companyId, serverRoomId);
 
-        if (companyId == null) {
-            throw new IllegalArgumentException("회사 ID를 입력해주세요.");
-        }
-        if (serverRoomId == null) {
-            throw new IllegalArgumentException("서버실 ID를 입력해주세요.");
-        }
-
-        CompanyServerRoom companyServerRoom = companyServerRoomRepository
+        CompanyServerRoom mapping = companyServerRoomRepository
                 .findByCompanyIdAndServerRoomId(companyId, serverRoomId)
                 .orElseThrow(() -> new EntityNotFoundException(
                         String.format("회사(ID: %d)와 서버실(ID: %d)의 매핑", companyId, serverRoomId)));
 
-        companyServerRoom.softDelete();
-
-        log.info("Company-serverRoom mapping deleted successfully");
+        mapping.softDelete();
     }
 
     /**
-     * 특정 회사의 여러 서버실 매핑 일괄 삭제
+     * 회사 기준 매핑 일괄 삭제
      */
     @Transactional
     public int deleteCompanyServerRoomsByCompany(Long companyId, List<Long> serverRoomIds) {
-        log.info("Deleting multiple company-serverRoom mappings: company={}, serverRoomIds={}",
-                companyId, serverRoomIds);
-
-        if (companyId == null) {
-            throw new IllegalArgumentException("회사 ID를 입력해주세요.");
-        }
-        if (serverRoomIds == null || serverRoomIds.isEmpty()) {
-            throw new IllegalArgumentException("삭제할 서버실을 하나 이상 선택해주세요.");
-        }
-
-        for (Long serverRoomId : serverRoomIds) {
-            if (serverRoomId == null) {
-                throw new IllegalArgumentException("서버실 ID는 null일 수 없습니다.");
-            }
-        }
+        log.info("[CompanyServerRoom] Batch delete. company={}, rooms={}", companyId, serverRoomIds);
 
         companyRepository.findActiveById(companyId)
                 .orElseThrow(() -> new EntityNotFoundException("회사", companyId));
 
-        List<CompanyServerRoom> mappingsToDelete = new ArrayList<>();
-        for (Long serverRoomId : serverRoomIds) {
-            CompanyServerRoom mapping = companyServerRoomRepository
-                    .findByCompanyIdAndServerRoomId(companyId, serverRoomId)
-                    .orElseThrow(() -> new EntityNotFoundException(
-                            String.format("회사(ID: %d)와 서버실(ID: %d)의 매핑", companyId, serverRoomId)));
-            mappingsToDelete.add(mapping);
-        }
+        List<CompanyServerRoom> mappings = serverRoomIds.stream()
+                .map(id -> companyServerRoomRepository.findByCompanyIdAndServerRoomId(companyId, id)
+                        .orElseThrow(() -> new EntityNotFoundException(
+                                String.format("회사(ID: %d)와 서버실(ID: %d)의 매핑", companyId, id))))
+                .toList();
 
-        mappingsToDelete.forEach(CompanyServerRoom::softDelete);
-
-        log.info("Successfully deleted {} company-serverRoom mappings for company {}",
-                mappingsToDelete.size(), companyId);
-
-        return mappingsToDelete.size();
+        mappings.forEach(CompanyServerRoom::softDelete);
+        return mappings.size();
     }
 
     /**
@@ -271,129 +192,82 @@ public class CompanyServerRoomService {
      */
     @Transactional
     public int deleteAllCompaniesByServerRoom(Long serverRoomId) {
-        log.info("Deleting all company mappings for serverRoom: {}", serverRoomId);
-
-        if (serverRoomId == null) {
-            throw new IllegalArgumentException("서버실 ID를 입력해주세요.");
-        }
+        log.info("[CompanyServerRoom] Delete all companies for serverRoom={}", serverRoomId);
 
         serverRoomRepository.findActiveById(serverRoomId)
                 .orElseThrow(() -> new EntityNotFoundException("서버실", serverRoomId));
 
-        List<CompanyServerRoom> mappingsToDelete = companyServerRoomRepository
-                .findByServerRoomId(serverRoomId);
+        List<CompanyServerRoom> mappings = companyServerRoomRepository.findByServerRoomId(serverRoomId);
 
-        if (mappingsToDelete.isEmpty()) {
-            log.info("No mappings found for serverRoom: {}", serverRoomId);
-            return 0;
-        }
-
-        mappingsToDelete.forEach(CompanyServerRoom::softDelete);
-
-        log.info("Successfully deleted {} company-serverRoom mappings for serverRoom {}",
-                mappingsToDelete.size(), serverRoomId);
-
-        return mappingsToDelete.size();
+        mappings.forEach(CompanyServerRoom::softDelete);
+        return mappings.size();
     }
 
     /**
-     * 특정 서버실의 특정 회사들 매핑 일괄 삭제
+     * 특정 서버실-특정 회사들의 매핑 일괄 삭제
      */
     @Transactional
     public int deleteCompaniesByServerRoom(Long serverRoomId, List<Long> companyIds) {
-
-        if (serverRoomId == null) {
-            throw new IllegalArgumentException("서버실 ID를 입력해주세요.");
-        }
-        if (companyIds == null || companyIds.isEmpty()) {
-            throw new IllegalArgumentException("삭제할 회사를 하나 이상 선택해주세요.");
-        }
-
-        for (Long companyId : companyIds) {
-            if (companyId == null) {
-                throw new IllegalArgumentException("회사 ID는 null일 수 없습니다.");
-            }
-        }
+        log.info("[CompanyServerRoom] Batch delete by serverRoom={}, companies={}", serverRoomId, companyIds);
 
         serverRoomRepository.findActiveById(serverRoomId)
                 .orElseThrow(() -> new EntityNotFoundException("서버실", serverRoomId));
 
-        List<CompanyServerRoom> mappingsToDelete = new ArrayList<>();
-        for (Long companyId : companyIds) {
-            CompanyServerRoom mapping = companyServerRoomRepository
-                    .findByCompanyIdAndServerRoomId(companyId, serverRoomId)
-                    .orElseThrow(() -> new EntityNotFoundException(
-                            String.format("회사(ID: %d)와 서버실(ID: %d)의 매핑", companyId, serverRoomId)));
-            mappingsToDelete.add(mapping);
-        }
+        List<CompanyServerRoom> mappings = companyIds.stream()
+                .map(id -> companyServerRoomRepository.findByCompanyIdAndServerRoomId(id, serverRoomId)
+                        .orElseThrow(() -> new EntityNotFoundException(
+                                String.format("회사(ID: %d)와 서버실(ID: %d)의 매핑", id, serverRoomId))))
+                .toList();
 
-        mappingsToDelete.forEach(CompanyServerRoom::softDelete);
-
-        log.info("Successfully deleted {} company-serverRoom mappings for serverRoom {}",
-                mappingsToDelete.size(), serverRoomId);
-
-        return mappingsToDelete.size();
+        mappings.forEach(CompanyServerRoom::softDelete);
+        return mappings.size();
     }
 
-    // 앞부분은 동일하므로 getCompanyServerRoomsGroupedByDataCenter 메서드만 표시
-
     /**
-     * 회사의 서버실 목록을 데이터센터별로 그룹화하여 조회 (rows, columns 포함)
+     * 회사의 서버실 목록을 데이터센터별로 그룹화하여 조회
      */
     public List<CompanyServerRoomGroupedByDataCenterResponse> getCompanyServerRoomsGroupedByDataCenter(Long companyId) {
-        log.info("Fetching server rooms grouped by datacenter for company: {}", companyId);
+        log.info("[CompanyServerRoom] Fetch grouped mappings for company={}", companyId);
 
-        // 회사 존재 확인
         companyRepository.findActiveById(companyId)
                 .orElseThrow(() -> new EntityNotFoundException("회사", companyId));
 
-        // CompanyServerRoom 매핑 조회
         List<CompanyServerRoom> mappings = companyServerRoomRepository.findByCompanyId(companyId);
 
-        // 데이터센터별로 그룹화
-        Map<Long, List<CompanyServerRoom>> groupedByDataCenter = mappings.stream()
-                .filter(mapping -> mapping.getServerRoom().getDataCenter() != null)
-                .collect(Collectors.groupingBy(
-                        mapping -> mapping.getServerRoom().getDataCenter().getId()
-                ));
+        Map<Long, List<CompanyServerRoom>> grouped = mappings.stream()
+                .filter(m -> m.getServerRoom().getDataCenter() != null)
+                .collect(Collectors.groupingBy(m -> m.getServerRoom().getDataCenter().getId()));
 
-        // 응답 DTO 생성
-        List<CompanyServerRoomGroupedByDataCenterResponse> result = groupedByDataCenter.entrySet().stream()
+        return grouped.entrySet().stream()
                 .map(entry -> {
-                    // 첫 번째 서버실에서 데이터센터 정보 추출
-                    DataCenter dataCenter = entry.getValue().get(0).getServerRoom().getDataCenter();
+                    DataCenter dc = entry.getValue().get(0).getServerRoom().getDataCenter();
 
-                    // 서버실 정보 리스트 생성 (rows, columns 포함)
-                    List<CompanyServerRoomGroupedByDataCenterResponse.ServerRoomInfo> serverRooms =
+                    List<CompanyServerRoomGroupedByDataCenterResponse.ServerRoomInfo> rooms =
                             entry.getValue().stream()
-                                    .map(mapping -> {
-                                        ServerRoom sr = mapping.getServerRoom();
+                                    .map(m -> {
+                                        ServerRoom sr = m.getServerRoom();
                                         return CompanyServerRoomGroupedByDataCenterResponse.ServerRoomInfo.builder()
                                                 .id(sr.getId())
                                                 .name(sr.getName())
                                                 .code(sr.getCode())
                                                 .location(sr.getLocation())
                                                 .floor(sr.getFloor())
-                                                .rows(sr.getRows())          // 행 정보 추가
-                                                .columns(sr.getColumns())    // 열 정보 추가
+                                                .rows(sr.getRows())
+                                                .columns(sr.getColumns())
                                                 .status(sr.getStatus())
                                                 .description(sr.getDescription())
                                                 .build();
                                     })
-                                    .collect(Collectors.toList());
+                                    .toList();
 
-                    // 데이터센터별 응답 DTO 생성
                     return CompanyServerRoomGroupedByDataCenterResponse.builder()
-                            .dataCenterId(dataCenter.getId())
-                            .dataCenterName(dataCenter.getName())
-                            .dataCenterCode(dataCenter.getCode())
-                            .dataCenterAddress(dataCenter.getAddress())
-                            .serverRooms(serverRooms)
+                            .dataCenterId(dc.getId())
+                            .dataCenterName(dc.getName())
+                            .dataCenterCode(dc.getCode())
+                            .dataCenterAddress(dc.getAddress())
+                            .serverRooms(rooms)
                             .build();
                 })
-                .collect(Collectors.toList());
-
-        log.info("Found {} datacenters with server rooms for company: {}", result.size(), companyId);
-        return result;
+                .toList();
     }
 }
